# PTMQuant

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  pyproject.toml
.github/workflows/: docker-publish.yml
configs/: _validation_sandbox.yaml  docker_run_example.yaml  example_mouse.yaml  preset_multiPTM_exploris240.yaml  preset_phospho_exploris240.yaml  preset_ubiquitin_exploris240.yaml  preset_wholeproteome_multipass.yaml  sample_sheet_KIST_EPS.tsv
diaquant/: __init__.py  alphadia_runner.py  cli.py  config.py  enzymes.py  imputation.py  instruments.py  manifest.py  mbr.py  metrics.py  modifications.py  multipass.py  parse_alphadia.py  parse_sage.py  predicted_library.py  ptm_localization.py  ptm_profiles.py  quantify.py  razor.py  rescore.py  rt_align.py  sage_runner.py  stats.py  writer.py
input/: test.yaml
scripts/: estimate_memory_v0_5_9.py  inspect_peptdeep_predict.py  verify_ptmquant.py
tests/: test_alphadia_runner.py  test_engine_flag.py  test_parse_alphadia.py  test_smoke.py
