[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diaquant"
# Version is kept single-source-of-truth in diaquant/__init__.py::__version__.
# The Dockerfile, GHCR release workflow, and run_manifest.json all read this
# same value, so bumping __version__ is the only place to edit the release
# number.  ``version`` is declared as dynamic below and wired via
# [tool.setuptools.dynamic].
dynamic = ["version"]
description = "Open-source DIA proteomics quantification pipeline with universal PTM support (Sage + directLFQ + AlphaPeptDeep)"
authors = [{name = "Manus AI"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyteomics>=4.6",
    "lxml>=4.9",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "click>=8.1",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "directlfq>=0.3.0",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
# PyPI package name is `peptdeep` (repo: MannLabs/alphapeptdeep); there is no `alphapeptdeep` wheel.
deeplearning = ["peptdeep>=1.4"]

[project.scripts]
ptmquant = "diaquant.cli:cli"
diaquant = "diaquant.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["diaquant*"]

[tool.setuptools.dynamic]
version = {attr = "diaquant.__version__"}
